--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
         # Keep gradle from crapping all over the log
         - TERM=dumb
     matrix:
+        - nodejs_version=4
         - nodejs_version=6
         - nodejs_version=8
         - nodejs_version=10
