--- a/bin/templates/project/build.gradle
+++ b/bin/templates/project/build.gradle
@@ -41,9 +41,9 @@ allprojects {
     //This replaces project.properties w.r.t. build settings
     project.ext {
       defaultBuildToolsVersion="28.0.3" //String
-      defaultMinSdkVersion=19 // Integer - updated from app/AndroidManifest.xml (minimum requirement should be at least Android 4.4)
-      defaultTargetSdkVersion=28 // Integer be updated from app/AndroidManifest.xml (should target the latest by default)
-      defaultCompileSdkVersion=28 // Integer - updated from app/AndroidManifest.xml (should compile with the latest by default)
+      defaultMinSdkVersion=19 // Integer - XXX
+      defaultTargetSdkVersion=28 // Integer - XXX
+      defaultCompileSdkVersion=28 // Integer - XXX
     }
 }
 
