Default compile SDK fixes
- Use defaultCompileSdkVersion from root build.gradle
- remove defaultTargetSdkVersion from root build.gradle
- remove default target config from framework/project.properties
- remove functions no longer needed from framework/cordova.gradle

--- a/bin/templates/project/app/build.gradle
+++ b/bin/templates/project/app/build.gradle
@@ -104,8 +104,7 @@ if (hasBuildExtras2) {
 
 // Set property defaults after extension .gradle files.
 if (ext.cdvCompileSdkVersion == null) {
-    ext.cdvCompileSdkVersion = privateHelpers.getProjectTarget()
-    //ext.cdvCompileSdkVersion = project.ext.defaultCompileSdkVersion
+    ext.cdvCompileSdkVersion = project.ext.defaultCompileSdkVersion
 }
 if (ext.cdvBuildToolsVersion == null) {
     ext.cdvBuildToolsVersion = privateHelpers.findLatestInstalledBuildTools()
