--- a/framework/project.properties
+++ b/framework/project.properties
@@ -4,8 +4,7 @@
 # Indicates whether an apk should be generated for each density.
 split.density=false
 
-# Project target.
-target=android-28
+# other configuration items:
 apk-configurations=
 renderscript.opt.level=O0
 android.library=true
