quick fix for targetSdkVersion

--- a/bin/templates/project/app/build.gradle
+++ b/bin/templates/project/app/build.gradle
@@ -177,6 +177,7 @@ android {
     }
 
     compileSdkVersion cdvCompileSdkVersion
+    targetSdkVersion cdvCompileSdkVersion
     buildToolsVersion cdvBuildToolsVersion
 
     // This code exists for Crosswalk and other Native APIs.
